# actor-core

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  package.json  pnpm-lock.yaml
.github/workflows/: test.yml
clients/python/: pyproject.toml
clients/python/tests/: common.py
clients/rust/: Cargo.toml  README.md
clients/rust/tests/: e2e.rs
docs/: docs.json  introduction.mdx  openapi.json
docs/actor/: actions.mdx  authentication.mdx  connections.mdx  events.mdx  lifecycle.mdx  metadata.mdx  overview.mdx  quickstart.mdx  schedule.mdx  state.mdx  types.mdx
docs/clients/: javascript.mdx
docs/concepts/: cors.mdx  edge.mdx  external-sql.mdx  interacting-with-actors.mdx  logging.mdx  overview.mdx  testing.mdx
docs/drivers/: file-system.mdx  memory.mdx  redis.mdx
docs/frameworks/: react.mdx
docs/integrations/: hono.mdx  resend.mdx
docs/snippets/: cloudflare-deploy.mdx  setup-actor.mdx  step-define-actor.mdx
docs/snippets/examples/: ai-agent-js.mdx  ai-agent-react.mdx  ai-agent-sqlite.mdx  chat-room-js.mdx  chat-room-react.mdx  chat-room-sqlite.mdx  crdt-js.mdx  crdt-react.mdx  crdt-sqlite.mdx  database-js.mdx  document-js.mdx  (+19 more)
docs/styles/: cta.js
examples/chat-room/: package.json
examples/chat-room-python/: package.json
examples/counter/: .gitignore  actorcore.config.ts  package.json
examples/linear-coding-agent/: package.json
examples/resend-streaks/: package.json
rust/client/: Cargo.toml
rust/client/src/: client.rs  handle.rs  lib.rs
rust/client/src/drivers/: mod.rs  sse.rs  ws.rs
scripts/: release.ts  template_platforms.ts
(+41 files in other folders)
