[package]
name = "actor-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
futures-util = "0.3.31"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio =  { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "handshake"] }
tungstenite = "0.26.2"
url = "2.5.4"
